flapivor/tests/m1/hopix/parser/bad/02-lexer-alien-infix-id.hopix
val drama = cat `eats ` mouse